--- a/style.css
+++ b/style.css
@@ -2,10 +2,15 @@ body{
   text-align: center;
   background-color: rgb(255,26,0);
   color: rgb(255,215,0);
+  font-family: 'Orbitron', sans-serif;
 
 }
 .timer{
-  padding : 200px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+
 
 
 }
