restructured and probably messed up all the files

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,11 @@
 <head>
   <title>Hackathon 2017 ZAX</title>
   <meta charset="utf-8">
-  <meta name = "viewport" content="width= device-width , initial-scale = 1 ">
-  <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
-  <link rel = "stylesheet" type = "text/css" href = "style.css">
+  <!-- <meta name = "viewport" content="width= device-width , initial-scale = 1 ">
+  --> <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
+  <link rel = "stylesheet" type = "text/css" href = "templates/style.css">
   <link rel = "icon" href = "http://www.metalinjection.net/wp-content/uploads/2014/06/Soviet-Sickle.png">
-  <link rel = "stylesheet" type="text/css" href="doomArticles.css">
+  <link rel = "stylesheet" type="text/css" href="templates/doomArticles.css">
 </head>
 
 <body onload = "setInterval( timer, 1000)" >
@@ -36,8 +36,8 @@
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="doomArticles.js"></script>
-<script src = "timer.js"> </script>
+<script src="templates/doomArticles.js"></script>
+<script src = "templates/timer.js"> </script>
 
 
 
