--- a/templates/index.html
+++ b/templates/index.html
@@ -40,6 +40,10 @@ button:hover{
 .timer{
   margin: 20%;
 }
+
+footer{
+  color: white;
+}
 </style>
 
 <!-- Kevin's Dooms styles -->
@@ -110,10 +114,12 @@ button:hover{
   <div id="dataDiv"></div>
 </div>
 
-<footer>Built by Team ZaxUnlmtd | Powered by IBM Watson | Button | New York Times API | Wikipedia API </footer>
+<footer>Built by Team ZaxUnlmtd | Powered by IBM Watson | Button | New York Times API | Wikipedia API | Background CC License Wikipedia</footer>
 
 
-
+<!-- two feature notes
+- button changes
+- header before article -->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
