--- a/templates/index.html
+++ b/templates/index.html
@@ -260,7 +260,7 @@ $("#doomBtn").click(function(){
   });
 </script>
 <div data-bttnio-id="btn-7426e86f09c74bf5"
-     data-bttnio-context='{ "user_location": { "latitude": 40.7382869, "longitude": -73.9823721 } }'>
+     data-bttnio-context='{ "user_location": { "latitude": 37.7749, "longitude": 122.4194 } }'>
 
    </div>
 <script>
