went back to results python var

--- a/templates/index.html
+++ b/templates/index.html
@@ -144,7 +144,7 @@ var gettingReady = 2;
 var justWokeUp = 1;
 var years;
 var data = {{result}};
-var data = 10;
+//var data = 10;
 switch(data){
   case(dead):
     years = 1;
